<resources>
    <string name="app_name">Explorin</string>
    <string name="masuk">Masuk</string>
    <string name="rencanakan_liburan">Rencanakan Liburan Anda dengan Satu Sentuhan</string>
    <string name="email">Email</string>
    <string name="password">Kata sandi</string>
    <string name="lupa_password"><u>Lupa password?</u></string>
    <string name="atau">Atau</string>
    <string name="login_google">Login with Google</string>
    <string name="havent_account">Belum punya akun?</string>
    <string name="register">Daftar</string>
    <string name="masuk_google">Masuk dengan Google</string>
    <string name="your_web_client_id">580726455448-0q3b48rm0qhni9jt6o4rldaut3ruohb7.apps.googleusercontent.com</string>
    <string name="isikan_dengan_nama_depan_serta_nama_belakang_kamu_ya">Isikan dengan nama depan serta nama belakang kamu ya!</string>
    <string name="_1_dari_3">1 dari 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2_dari_3">2 dari 3</string>
    <string name="isikan_emailmu_dengan_benar_jangan_sampai_salah">Isikan emailmu dengan benar, jangan sampai salah</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="have_acc">Sudah punya akun?</string>
    <string name="next">Selanjutnya</string>
    <string name="_3_dari_3">3 dari 3</string>
    <string name="tulis_kata_sandi_milikmu_jangan_sampai_orang_lain_tau_ya">Tulis kata sandi milikmu, jangan sampai orang lain tau ya</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi kata sandi</string>
</resources>