<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.register.RegisterSecondFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back"
        android:layout_marginTop="24dp"
        />

    <TextView
        android:id="@+id/tvRegister"
        style="@style/bold32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvPage"
        style="@style/medium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2_dari_3"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintTop_toBottomOf="@id/tvRegister" />

    <TextView
        android:id="@+id/tvRegisterText"
        style="@style/medium20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/isikan_emailmu_dengan_benar_jangan_sampai_salah"
        app:layout_constraintBottom_toTopOf="@id/edtEmail"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        style="@style/TextInput"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailInput"
            style="@style/TextEdit"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:icon="@drawable/ic_next"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>