<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.register.RegisterThirdFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRegister"
        style="@style/bold32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvPage"
        style="@style/medium16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3_dari_3"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="@id/tvRegister"
        app:layout_constraintTop_toBottomOf="@id/tvRegister" />

    <TextView
        android:id="@+id/tvRegisterText"
        style="@style/medium20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/tulis_kata_sandi_milikmu_jangan_sampai_orang_lain_tau_ya"
        app:layout_constraintBottom_toTopOf="@id/edtSandi"
        app:layout_constraintTop_toBottomOf="@id/tvRegister"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtSandi"
        style="@style/TextInput"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="42dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSandiInput"
            style="@style/TextEdit"
            android:drawableStart="@drawable/ic_sandi"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtSandiConfirmation"
        style="@style/TextInput"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtSandi"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtSandiConfirmationInput"
            style="@style/TextEdit"
            android:drawableStart="@drawable/ic_sandi"
            android:hint="@string/konfirmasi_kata_sandi"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/ButtonStyle"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="32dp"
        android:text="@string/register"
        app:icon="@drawable/ic_next"
        app:iconGravity="end"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>